스크립트 테스트

--- a/1.html
+++ b/1.html
@@ -7,5 +7,9 @@
 <body>
     <h1>Hello.</h1>
     <p>It's good time to study</p>
+    <img src="/img/1608934365.gif"></img>
+    <img src="/img/1608934365.gif" width="480px" height="auto">밥밥</img>
+    <p> 스크립트 테스트 </p>
+    <scrpit>document.write(1+1)</script>
 </body>
 </html>
